fix: remove duplicate StringUtils (1566 LOC), relax ProxiedHandlerChain cast, align JDK 21 baseline, drop §12 defect section